kubernets/k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name:  express-service
spec:
  selector:
    app:  express
  type:   ClusterIP  
  ports:
  - name:  http
    port:  80
    targetPort:  3000
